# CSC14120_Parallel-Programming_Final-Project

./: .gitignore  LICENSE  README.md
mini-dnn-cpp-master/: CMakeLists.txt  README.md  demo.cc  demo.cu  train.cc
mini-dnn-cpp-master/model/: params-lenet5.txt  params.txt
mini-dnn-cpp-master/src/: CMakeLists.txt  GpuTimer.h  cuda_executor.h  cuda_manager.h  kernel_launcher.h  layer.h  loss.h  mnist.cc  network.cc  network.h  utils.h
mini-dnn-cpp-master/src/layer/: conv.cc  conv.cu  conv.h  conv_gpu.cc  conv_gpu.h
mini-dnn-cpp-master/src/layer/cuda/: CMakeLists.txt  basic_forward.cu  cuda_manager.cu  cuda_manager.h  helper.cu  helper.h  smem_forward.cu
mini-dnn-cpp-master/src/layer/cuda_functions/: basic_forward.cu  device.cu  device.h  smem_forward.cu
